--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -1,36 +1,77 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Product preview card component</title>
+    <!-- favicon -->
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  Preview
+    <!-- font -->
 
-  Gabrielle Essence Eau De Parfum
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap"
+      rel="stylesheet"
+    />
 
-  A floral, solar and voluptuous interpretation composed by Olivier Polge, 
-  Perfumer-Creator for the House of CHANEL.
+    <!-- CSS -->
 
-  $149.99
-  $169.99
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
-  Add to Cart
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+    <title>Frontend Mentor | Product preview card component</title>
+  </head>
+
+  <body>
+    <main>
+      <section class="product-preview-card">
+        <div class="product-preview-card__image">
+          <img
+            src="./images/image-product-desktop.jpg"
+            alt="product preview card image"
+          />
+        </div>
+        <div class="product-preview-card__info">
+          <h3 class="product-name">PERFUME</h3>
+          <h2 class="product-preview-card__title">
+            Gabrielle<br />
+            Essence Eau<br />
+            De Parfum
+          </h2>
+          <p class="product-preview-card__description">
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+          <div class="product-preview-card__price">
+            <span class="product-preview-card__price-value"> $149.99 </span>
+            <span class="product-preview-card__price-currency"> USD </span>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    $169.99 Add to Cart
+
+    <div class="attribution">
+      Challenge by
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a
+        href="https://heric-olier-frontend-developer.netlify.app"
+        target="_blank"
+        >Heric Olier</a
+      >.
+    </div>
+  </body>
 </html>
