--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;700&display=swap"
-      href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Fraunces:wght@900&display=swap"
       rel="stylesheet"
     />
 
