--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -54,12 +54,15 @@
           </p>
           <div class="product-preview-card__price">
             <span class="product-preview-card__price-value"> $149.99 </span>
-            <span class="product-preview-card__price-currency"> USD </span>
+            <span class="product-preview-card__price-discount"> $169.99 </span>
+          </div>
+          <div class="product-preview-card__button">
+            <h2 class="product-preview-card__button-cart">Add to Cart</h2>
           </div>
         </div>
       </section>
     </main>
-    $169.99 Add to Cart
+    
 
     <div class="attribution">
       Challenge by
@@ -72,6 +75,5 @@
         >Heric Olier</a
       >.
     </div>
-
   </body>
 </html>
