Finish Desktop UI

--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -24,6 +24,13 @@
       rel="stylesheet"
     />
 
+    <!-- fontawesome kit -->
+
+    <script
+      src="https://kit.fontawesome.com/4d63ed8f35.js"
+      crossorigin="anonymous"
+    ></script>
+
     <!-- CSS -->
 
     <link rel="stylesheet" href="./css/reset.css" />
@@ -57,23 +64,24 @@
             <span class="product-preview-card__price-discount"> $169.99 </span>
           </div>
           <div class="product-preview-card__button">
-            <h2 class="product-preview-card__button-cart">Add to Cart</h2>
+            <h2 class="product-preview-card__button-cart">
+              <i class="fa-solid fa-cart-shopping"></i>Add to Cart
+            </h2>
           </div>
         </div>
       </section>
+      <!---- footer SECTION ---->
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          ><strong>Frontend Mentor</strong></a
+        >. Coded by
+        <a
+          href="https://heric-olier-frontend-developer.netlify.app"
+          target="_blank"
+          ><strong>Heric Olier</strong></a
+        >.
+      </div>
     </main>
-    
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by
-      <a
-        href="https://heric-olier-frontend-developer.netlify.app"
-        target="_blank"
-        >Heric Olier</a
-      >.
-    </div>
   </body>
 </html>
