--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -35,6 +35,7 @@
 
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
 
     <title>Frontend Mentor | Product preview card component</title>
   </head>
