--- a/product-preview-card-component-main/index.html
+++ b/product-preview-card-component-main/index.html
@@ -52,9 +52,7 @@
         <div class="product-preview-card__info">
           <h3 class="product-name">PERFUME</h3>
           <h2 class="product-preview-card__title">
-            Gabrielle<br />
-            Essence Eau<br />
-            De Parfum
+            Gabrielle Essence Eau De Parfum
           </h2>
           <p class="product-preview-card__description">
             A floral, solar and voluptuous interpretation composed by Olivier
